Z-index fix + cleanup

--- a/styles/athlete.css
+++ b/styles/athlete.css
@@ -41,10 +41,10 @@
 .blue
 {
   background : #400068 ;
-  stroke     : #400068 ;
+  stroke     : #400068
 }
 .green
 {
   background : #570 ;
-  stroke     : #570 ;
+  stroke     : #570
 }
